V.1.6.0 - Added Dark Theme (on popup) - Added option to set Monday first day of the week (calendar picker) - Reorganize options screen - Little improvmenets and fixes - Update packages

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Jira Toggl",
-  "description": "A web extension for syncing Toggl timelog entries to your Jira Software worklog",
+  "name": "Jira 2 Toggl",
+  "description": "Web extension that sync Toggl Time records to Jira Worklogs",
   "version": null,
   "permissions": [
     "https://*/",
