--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "jira-toggl",
-  "version": "1.5.9",
-  "description": "A Vue.js web extension",
-  "author": "Simon Eldevig <simoneldevig@gmail.com>",
+  "name": "jira2toggl",
+  "version": "1.6.0",
+  "description": "Web extension that sync Toggl Time records to Jira Worklogs",
+  "author": "UnrealMitch <unrealmitch@gmail.com>",
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
     "prettier": "prettier \"src/**/*.{js,vue}\"",
@@ -14,46 +14,46 @@
     "watch:dev": "cross-env HMR=true npm run build:dev -- --watch"
   },
   "contributors": [
-    "UnrealMitch <unrealmitch@gmail.com>"
+    "Simon Eldevig <simoneldevig@gmail.com>"
   ],
   "dependencies": {
-    "axios": "^0.19.0",
-    "vue": "^2.6.10",
-    "webextension-polyfill": "^0.3.1",
-    "moment": "^2.24.0",
-    "vue-material": "^1.0.0-beta-10.2"
+    "axios": "^0.19.2",
+    "moment": "^2.29.1",
+    "vue": "^2.6.14",
+    "vue-material": "^1.0.0-beta-15",
+    "webextension-polyfill": "^0.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/runtime-corejs3": "^7.4.0",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/runtime-corejs3": "^7.14.6",
     "archiver": "^3.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.2",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^4.5.3",
-    "core-js": "^3.0.1",
+    "core-js": "^3.14.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
-    "ejs": "^2.6.1",
+    "ejs": "^2.7.4",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^1.1.11",
     "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
-    "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.6.10",
+    "vue-loader": "^15.9.7",
+    "vue-template-compiler": "^2.6.14",
     "web-ext-types": "^2.1.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-extension-reloader": "^1.1.0"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-extension-reloader": "^1.1.4"
   }
 }
