V.1.6.0 - Added Dark Theme (on popup) - Added option to set Monday first day of the week (calendar picker) - Reorganize options screen - Little improvmenets and fixes - Update packages * Deleted old packages * Renamed Plugin

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Jira 2 Toggl",
+  "name": "Toggl To Jira",
   "description": "Web extension that sync Toggl Time records to Jira Worklogs",
   "version": null,
   "permissions": [
