--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jira2toggl",
+  "name": "toggl2jira",
   "version": "1.6.0",
   "description": "Web extension that sync Toggl Time records to Jira Worklogs",
   "author": "UnrealMitch <unrealmitch@gmail.com>",
