--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toggl2jira",
-  "version": "1.7.3",
+  "version": "1.8.0",
   "description": "Web extension that sync Toggl Time records to Jira Worklogs",
   "author": "UnrealMitch <unrealmitch@gmail.com>",
   "scripts": {
@@ -14,14 +14,16 @@
     "watch:dev": "cross-env HMR=true npm run build:dev -- --watch"
   },
   "contributors": [
+    "UnrealMitch <unrealmitch@gmail.com>",
     "Simon Eldevig <simoneldevig@gmail.com>"
   ],
   "dependencies": {
     "axios": "^0.21.2",
-    "vue": "^2.6.14",
-    "webextension-polyfill": "^0.3.1",
     "moment": "^2.24.0",
-    "vue-material": "^1.0.0-beta-15"
+    "vue": "^2.6.14",
+    "vue-material": "^1.0.0-beta-15",
+    "vue-simple-context-menu": "^3.4.2",
+    "webextension-polyfill": "^0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
