v.1.9.0 +Added option: Change status of issue if toggl description log contains #NameTranstion <i>(like smartcommits, example: TASK-1 #Done) *Update all logs with same jira issue, when update status via contextmenu or log description *Changed default transitions for team managed projects of jira (classics in options descriptions) *Solved minibug with easteregg (show/change per update, not per log) *Added option of divider in transitions *Firefox better fix (only header of user-agent in this browser) *Firefox Updates!
!UPDATE the readme with all features explained (and screenshoot, a lot of them), also with tuto.
Added link to readme from options

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -32,5 +32,11 @@
   "options_ui": {
     "page": "options/options.html",
     "chrome_style": true
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{9c4e2bb1-4e58-47b3-bed9-015e5b92136a}",
+      "update_url": "https://shared.mmosquera.es/Extensions/Jira2Toggl/updates.json"
+    }
   }
 }
